# basic-cabal-nix

./: .ghci  .gitignore  README.md  basic-cabal-nix.cabal  flake.nix
