cabal-version: 1.12

name:           basic-cabal-nix
version:        1.0
category:       Unclassified
homepage:       https://github.com/dino-/basic-cabal-nix#readme
bug-reports:    https://github.com/dino-/basic-cabal-nix/issues
author:         Dino Morelli
maintainer:     dino@ui3.info
copyright:      2022 Dino Morelli
license:        ISC
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md
    .gitignore
    package.yaml
    README.md

source-repository head
  type: git
  location: https://github.com/dino-/basic-cabal-nix

library
  exposed-modules:
      Example
  other-modules:
      Paths_basic_cabal_nix
  hs-source-dirs:
      src/lib
  default-extensions:
      BangPatterns
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      GeneralizedNewtypeDeriving
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NumericUnderscores
      OverloadedStrings
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
  ghc-options: -fwarn-tabs -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=3 && <5
  default-language: Haskell2010

executable basic-cabal-nix
  main-is: Main.hs
  other-modules:
      Paths_basic_cabal_nix
  hs-source-dirs:
      src/app
  default-extensions:
      BangPatterns
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      GeneralizedNewtypeDeriving
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NumericUnderscores
      OverloadedStrings
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
  ghc-options: -fwarn-tabs -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=3 && <5
    , basic-cabal-nix
  default-language: Haskell2010

test-suite basic-cabal-nix-test-suite
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Paths_basic_cabal_nix
  hs-source-dirs:
      src/test
  default-extensions:
      BangPatterns
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      GeneralizedNewtypeDeriving
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NumericUnderscores
      OverloadedStrings
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
  ghc-options: -fwarn-tabs -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      base >=3 && <5
    , basic-cabal-nix
    , tasty
    , tasty-hunit
    , tasty-quickcheck
  default-language: Haskell2010
