cabal-version: 2.2

name: basic-cabal-nix
version: 1.0
-- synopsis:
-- description:
author: Dino Morelli
maintainer: dino@ui3.info
copyright: 2022 Dino Morelli
category: Unclassified
license: ISC
license-file: LICENSE
build-type: Simple
extra-source-files:
  CHANGELOG.md
  flake.nix
  .gitignore
  nix/stack-integration.nix
  README.md

source-repository head
  type: git
  location: https://github.com/dino-/basic-cabal-nix

common lang
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
  ghc-options:
    -fwarn-tabs
    -Wall
    -Wcompat
    -- -Werror  -- Around the time of lts-12.11 (ghc >= 8.4.3), this is no longer recommended
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

library
  import: lang
  exposed-modules:
      Example
  other-modules:
      Paths_basic_cabal_nix
  hs-source-dirs:
    src/lib
  build-depends:
      base >=3 && <5

executable basic-cabal-nix
  import: lang
  main-is: Main.hs
  other-modules:
      Paths_basic_cabal_nix
  hs-source-dirs:
    src/app
  build-depends:
      base >=3 && <5
    , basic-cabal-nix

test-suite basic-cabal-nix-test-suite
  import: lang
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Paths_basic_cabal_nix
  hs-source-dirs:
    src/test
  ghc-options: -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      base >=3 && <5
    , basic-cabal-nix
    , tasty
    , tasty-hunit
    , tasty-quickcheck
